Removed Admin Portal button and updated navigation

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NexAgency_Mentors - Interactive 3D Portfolio</title>
+    <title>Nex Agency - Interactive 3D Portfolio</title>
     <meta name="description" content="Modern interactive portfolio showcasing innovative 3D experiences and creative works" />
-    <meta name="author" content="NexAgency_Mentors" />
+    <meta name="author" content="Nex Agency" />
 
-    <meta property="og:title" content="NexAgency_Mentors - Interactive 3D Portfolio" />
+    <meta property="og:title" content="Nex Agency - Interactive 3D Portfolio" />
     <meta property="og:description" content="Modern interactive portfolio showcasing innovative 3D experiences and creative works" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
